--- a/bufin del norte/bufin/package.json
+++ b/bufin del norte/bufin/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/head": "^2.0.0",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.2",
+    "emailjs-com": "^3.2.0",
     "vue": "^3.4.38",
     "vue-router": "^4.5.1"
   },
